--- a/appconfig.coffee.example
+++ b/appconfig.coffee.example
@@ -1,54 +1,56 @@
-a = window.Periscope
+# Instanstiate Periscope
+periscope = window.Periscope
 
+# Setup Menu
 opts =
-    keys:      ['TopLevelDomain', 'Location', 'Env', 'Host'],
+    menuTitles:      ['TopLevelDomain', 'Location', 'Env', 'Host']
+    defaults:        ['example.com', 'us', 'dev', 'All']
     listOverride:
         BoxType:
             'Even': /0[2468]/
             'Odd': /0[13579]/
             'All': /.*/
-    defaults:  ['example.com', 'us', 'dev', 'All']
+    servers:
+        'example.com':
+            us:
+                dev: [
+                    'www01'
+                    'www02'
+                ]
+                stg: [
+                    'www01'
+                    'www02'
+                    'www03'
+                    'www04'
+                ]
+                prd: [
+                    'www01'
+                    'www02'
+                    'www03'
+                    'www04'
+                    'www05'
+                    'www06'
+                    'www07'
+                    'www08'
+                ]
+            uk:
+                stg: [
+                    'www01'
+                    'www02'
+                    'www03'
+                    'www04'
+                ]
+                prd: [
+                    'www01'
+                    'www02'
+                    'www03'
+                    'www04'
+                    'www05'
+                    'www06'
+                    'www07'
+                    'www08'
+                ]
 
-opts.servers =
-    'example.com':
-        us:
-            dev: [
-                'www01'
-                'www02'
-            ]
-            stg: [
-                'www01'
-                'www02'
-                'www03'
-                'www04'
-            ]
-            prd: [
-                'www01'
-                'www02'
-                'www03'
-                'www04'
-                'www05'
-                'www06'
-                'www07'
-                'www08'
-            ]
-        uk:
-            stg: [
-                'www01'
-                'www02'
-                'www03'
-                'www04'
-            ]
-            prd: [
-                'www01'
-                'www02'
-                'www03'
-                'www04'
-                'www05'
-                'www06'
-                'www07'
-                'www08'
-            ]
-
-a.upScope opts
+# Run it!
+periscope.upScope opts
 
