--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
         "prefer-spread": 2,
         "prefer-template": 2,
         "quotes": [2, "single"],
+        "semi": [2, "always"],
         "strict": 0
     }
 }
