--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^1.6.0",
     "grunt": "^0.4.5",
     "grunt-eslint": "^17.2.0",
-    "babel-eslint": "^4.1.3"
+    "babel-eslint": "^4.1.3",
+    "grunt-babel": "^5.0.3"
   }
 }
