--- a/config/appconfig.json.example
+++ b/config/appconfig.json.example
@@ -43,5 +43,6 @@
         "www05.prd.gb.example.com",
         "www06.prd.gb.example.com",
         "www07.prd.gb.example.com",
-        "www08.prd.gb.example.com"    ]
+        "www08.prd.gb.example.com"
+    ]
 }
